--- a/app/assets/style/index.scss
+++ b/app/assets/style/index.scss
@@ -1,6 +1,14 @@
-.container {
-  max-width: 1280px;
-  margin: 0 auto;
+h1 .logo{
+  background-image: url(https://hexschool.github.io/webLayoutTraining1st/week5/logo-ANSWER.svg);
+}
+
+h1 a{
+  width: 150px;
+  height: 42px;
+  display: block;
+  text-indent: 101%;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .fz-12{
@@ -29,9 +37,22 @@ a{
 .pic{
   width: 40px;
   height: 40px;
+  object-fit: cover;
 }
 
 mark{
   background: #EDF4EE;
   color: #2A8356;
+}
+
+.zip_btn{
+  width: 175px;
+}
+
+.list-style_disc{
+  list-style-type: disc ;
+}
+
+.border-top_none{
+  border-color: #fff;
 }
